--- a/data/talks/S30.yml
+++ b/data/talks/S30.yml
@@ -34,6 +34,7 @@ speakers:
   company: programmer
   location: Nasushiobara, Tochigi, Japan
   gravatar: 40f4d1f2e77078955bd01e9fb4a503ba
+  committer: true
   links:
     github: seki
     twitter: m_seki
