--- a/data/talks/S66.yml
+++ b/data/talks/S66.yml
@@ -15,6 +15,7 @@ speakers:
   company: "TOUA CORPORATION / Synergy Box Inc."
   location: Japan
   gravatar: 
+  committer: true
   links:
     github: unak
     twitter: unak
