--- a/data/talks/S08.yml
+++ b/data/talks/S08.yml
@@ -10,6 +10,7 @@ speakers:
   company: Advanced senior engineer in paperboy&co., Inc.
   location:
   gravatar: eabad423977cfc6873b8f5df62b848a6
+  committer: true
   links:
     github: hsbt
     twitter: hsbt
