--- a/data/talks/S69.yml
+++ b/data/talks/S69.yml
@@ -15,6 +15,7 @@ speakers:
   company: 
   location: 
   gravatar: 9673ac7770ee09f76ff5d839820db157
+  committer: true
   links:
     github: okkez
     twitter: okkez
